# flask-shortlink

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  urls.shelve
templates/: analytics.html  analytics_index.html  index.html
