[tool.poetry]
name = "flask-shortlink"
version = "0.1.0"
description = "A simple URL-Shortener Service built with Flask."
authors = ["Jakob Endler <jakob.endler@hotmail.de>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-WTF = "^0.14.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
